--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group = 'com.fortify.fod'
-version = '4.0.0'
+version = '4.0.1a'
 
 buildscript {
     repositories {
@@ -29,7 +29,6 @@ dependencies {
     compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.9.0'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.2'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
-    compile 'com.fortify.fod:BSITokenParser:1.1.0'
     compile 'com.beust:jcommander:1.48'
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.0.0'
     testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.0.0'
